--- a/TransitHubXAML/Wallet.xaml
+++ b/TransitHubXAML/Wallet.xaml
@@ -65,19 +65,19 @@
                 <Canvas>
                     <Label Content="Adult Monthly Pass - Feb" Height="45" Canvas.Top="25" Width="300" Canvas.Left="10" FontSize="24"/>
 					<Label Content="Purchased: Feb 02, 2021" FontSize="16" Canvas.Left="10" Canvas.Top="60" />
-                    <Button Content="View" Click="Adult_Pass_Click" Height="45" Width="100" FontSize="24" HorizontalContentAlignment="Center" Canvas.Right="20" Canvas.Top="38"/>
+                    <Button Content="View" Height="45" Width="100" FontSize="24" HorizontalContentAlignment="Center" Canvas.Right="20" Canvas.Top="38"/>
                     <Rectangle Fill="#FFACACAC" Height="1" Stroke="Black" Width="472" Canvas.Left="-28" Canvas.Top="115"/>
-					<Label Content="Youth Ticket" Height="45" Canvas.Top="140" Width="300" Canvas.Left="10" FontSize="24"/>
-					<Label Content="Purchased: Feb 05, 2021" FontSize="16" Canvas.Left="10" Canvas.Top="175" />
-					<Button Content="View" Height="45" Width="100" FontSize="24" HorizontalContentAlignment="Center" Canvas.Right="20" Canvas.Top="153"/>
+                    <Label x:Name="ticket1" Content="Youth Ticket" Height="45" Canvas.Top="140" Width="300" Canvas.Left="10" FontSize="24"/>
+                    <Label x:Name="ticketDate1" Content="Purchased: Feb 05, 2021" FontSize="16" Canvas.Left="10" Canvas.Top="175" />
+					<Button Content="View" Height="45" Width="100" FontSize="24" HorizontalContentAlignment="Center" Canvas.Right="20" Canvas.Top="153" Click="Ticket_1_Click"/>
                     <Rectangle Fill="#FFACACAC" Height="1" Stroke="Black" Width="472" Canvas.Left="-28" Canvas.Top="230"/>
-					<Label Content="Adult Ticket" Height="45" Canvas.Top="255" Width="300" Canvas.Left="10" FontSize="24"/>
-					<Label Content="Purchased: Feb 05, 2021" FontSize="16" Canvas.Left="10" Canvas.Top="290" />
-					<Button Content="View" Height="45" Width="100" FontSize="24" HorizontalContentAlignment="Center" Canvas.Right="20" Canvas.Top="268"/>
+                    <Label x:Name="ticket2" Content="Adult Ticket" Height="45" Canvas.Top="255" Width="300" Canvas.Left="10" FontSize="24"/>
+                    <Label x:Name="ticketDate2" Content="Purchased: Feb 05, 2021" FontSize="16" Canvas.Left="10" Canvas.Top="290" />
+					<Button Content="View" Height="45" Width="100" FontSize="24" HorizontalContentAlignment="Center" Canvas.Right="20" Canvas.Top="268" Click="Ticket_2_Click"/>
                     <Rectangle Fill="#FFACACAC" Height="1" Stroke="Black" Width="472" Canvas.Left="-28" Canvas.Top="345"/>
-					<Label Content="Adult Ticket" Height="45" Canvas.Top="370" Width="300" Canvas.Left="10" FontSize="24"/>
-					<Label Content="Purchased: Feb 05, 2021" FontSize="16" Canvas.Left="10" Canvas.Top="405" />
-					<Button Content="View" Height="45" Width="100" FontSize="24" HorizontalContentAlignment="Center" Canvas.Right="20" Canvas.Top="383"/>
+                    <Label x:Name="ticket3" Content="Adult Ticket" Height="45" Canvas.Top="370" Width="300" Canvas.Left="10" FontSize="24"/>
+                    <Label  x:Name="ticketDate3" Content="Purchased: Feb 05, 2021" FontSize="16" Canvas.Left="10" Canvas.Top="405" />
+					<Button Content="View" Height="45" Width="100" FontSize="24" HorizontalContentAlignment="Center" Canvas.Right="20" Canvas.Top="383" Click="Ticket_3_Click"/>
                     <Rectangle Fill="#FFACACAC" Height="1" Stroke="Black" Width="472" Canvas.Left="-28" Canvas.Top="460"/>
 					<Label Content="Adult Monthly Pass - Mar" Height="45" Canvas.Top="485" Width="300" Canvas.Left="10" FontSize="24"/>
 					<Label Content="Purchased: Feb 28, 2021" FontSize="16" Canvas.Left="10" Canvas.Top="520" />
