--- a/TransitHubXAML/Wallet.xaml
+++ b/TransitHubXAML/Wallet.xaml
@@ -66,23 +66,23 @@
                     <Label Content="Adult Monthly Pass - April" Height="45" Canvas.Top="25" Width="300" Canvas.Left="10" FontSize="24"/>
 					<Label Content="Purchased: Apr 05, 2021" FontSize="16" Canvas.Left="10" Canvas.Top="60" />
                     <Button Content="View" Height="45" Width="100" FontSize="24" HorizontalContentAlignment="Center" Canvas.Right="20" Canvas.Top="38" Click="Adult_Click"/>
-                    <Rectangle Fill="#FFACACAC" Height="1" Stroke="Black" Width="472" Canvas.Left="-28" Canvas.Top="115"/>
+                    <Rectangle Fill="#FFACACAC" Height="1" Stroke="#FFACACAC" Width="472" Canvas.Left="-28" Canvas.Top="115"/>
                     <Label x:Name="ticket1" Content="Youth Ticket" Height="45" Canvas.Top="140" Width="300" Canvas.Left="10" FontSize="24"/>
                     <Label x:Name="ticketDate1" Content="Purchased: Apr 03, 2021" FontSize="16" Canvas.Left="10" Canvas.Top="175" />
 					<Button Content="View" Height="45" Width="100" FontSize="24" HorizontalContentAlignment="Center" Canvas.Right="20" Canvas.Top="153" Click="Ticket_1_Click"/>
-                    <Rectangle Fill="#FFACACAC" Height="1" Stroke="Black" Width="472" Canvas.Left="-28" Canvas.Top="230"/>
+                    <Rectangle Fill="#FFACACAC" Height="1" Stroke="#FFACACAC" Width="472" Canvas.Left="-28" Canvas.Top="230"/>
                     <Label x:Name="ticket2" Content="Adult Ticket" Height="45" Canvas.Top="255" Width="300" Canvas.Left="10" FontSize="24"/>
                     <Label x:Name="ticketDate2" Content="Purchased: Apr 02, 2021" FontSize="16" Canvas.Left="10" Canvas.Top="290" />
 					<Button Content="View" Height="45" Width="100" FontSize="24" HorizontalContentAlignment="Center" Canvas.Right="20" Canvas.Top="268" Click="Ticket_2_Click"/>
-                    <Rectangle Fill="#FFACACAC" Height="1" Stroke="Black" Width="472" Canvas.Left="-28" Canvas.Top="345"/>
+                    <Rectangle Fill="#FFACACAC" Height="1" Stroke="#FFACACAC" Width="472" Canvas.Left="-28" Canvas.Top="345"/>
                     <Label x:Name="ticket3" Content="Adult Ticket" Height="45" Canvas.Top="370" Width="300" Canvas.Left="10" FontSize="24"/>
                     <Label  x:Name="ticketDate3" Content="Purchased: Apr 01, 2021" FontSize="16" Canvas.Left="10" Canvas.Top="405" />
 					<Button Content="View" Height="45" Width="100" FontSize="24" HorizontalContentAlignment="Center" Canvas.Right="20" Canvas.Top="383" Click="Ticket_3_Click"/>
-                    <Rectangle Fill="#FFACACAC" Height="1" Stroke="Black" Width="472" Canvas.Left="-28" Canvas.Top="460"/>
+                    <Rectangle Fill="#FFACACAC" Height="1" Stroke="#FFACACAC" Width="472" Canvas.Left="-28" Canvas.Top="460"/>
 					<Label Content="Youth Monthly Pass - April" Height="45" Canvas.Top="485" Width="300" Canvas.Left="10" FontSize="24"/>
 					<Label Content="Purchased: Apr 01, 2021" FontSize="16" Canvas.Left="10" Canvas.Top="520" />
 					<Button Content="View" Height="45" Width="100" FontSize="24" HorizontalContentAlignment="Center" Canvas.Right="20" Canvas.Top="498" Click="Youth_Click"/>
-                    <Rectangle Fill="#FFACACAC" Height="1" Stroke="Black" Width="472" Canvas.Left="-28" Canvas.Top="575"/>
+                    <Rectangle Fill="#FFACACAC" Height="1" Stroke="#FFACACAC" Width="472" Canvas.Left="-28" Canvas.Top="575"/>
 				</Canvas>
 			</TabItem>
 
@@ -91,19 +91,19 @@
                     <Label Content="Adult Monthly Pass - Jan" Height="39" Canvas.Top="25" Width="300" Canvas.Left="10" FontSize="24"/>
                     <Label Content="Purchased: Dec 30, 2020" FontSize="16" Canvas.Left="10" Canvas.Top="60" />
                     <Label Content="Expired: Jan 31, 2021" FontSize="16" Canvas.Left="10" Canvas.Top="90" Foreground="Red"/>
-                    <Rectangle Fill="#FFACACAC" Height="1" Stroke="Black" Width="472" Canvas.Left="-28" Canvas.Top="140"/>
+                    <Rectangle Fill="#FFACACAC" Height="1" Stroke="#FFACACAC" Width="472" Canvas.Left="-28" Canvas.Top="140"/>
                     <Label Content="Adult Ticket" Height="39" Canvas.Top="165" Width="300" Canvas.Left="10" FontSize="24"/>
                     <Label Content="Purchased: Jan 15, 2021" FontSize="16" Canvas.Left="10" Canvas.Top="200" />
                     <Label Content="Used: Jan 20, 2021" FontSize="16" Canvas.Left="10" Canvas.Top="230" Foreground="Red"/>
-                    <Rectangle Fill="#FFACACAC" Height="1" Stroke="Black" Width="472" Canvas.Left="-28" Canvas.Top="280"/>
+                    <Rectangle Fill="#FFACACAC" Height="1" Stroke="#FFACACAC" Width="472" Canvas.Left="-28" Canvas.Top="280"/>
                     <Label Content="Adult Ticket" Height="39" Canvas.Top="305" Width="300" Canvas.Left="10" FontSize="24"/>
                     <Label Content="Purchased: Jan 1, 2021" FontSize="16" Canvas.Left="10" Canvas.Top="340" />
                     <Label Content="Used: Jan 1, 2021" FontSize="16" Canvas.Left="10" Canvas.Top="370" Foreground="Red"/>
-                    <Rectangle Fill="#FFACACAC" Height="1" Stroke="Black" Width="472" Canvas.Left="-28" Canvas.Top="420"/>
+                    <Rectangle Fill="#FFACACAC" Height="1" Stroke="#FFACACAC" Width="472" Canvas.Left="-28" Canvas.Top="420"/>
                     <Label Content="Youth Ticket" Height="39" Canvas.Top="445" Width="300" Canvas.Left="10" FontSize="24"/>
                     <Label Content="Purchased: Dec 3, 2020" FontSize="16" Canvas.Left="10" Canvas.Top="480" />
                     <Label Content="Expired: Dec 10, 2020" FontSize="16" Canvas.Left="10" Canvas.Top="510" Foreground="Red"/>
-                    <Rectangle Fill="#FFACACAC" Height="1" Stroke="Black" Width="472" Canvas.Left="-28" Canvas.Top="560"/>
+                    <Rectangle Fill="#FFACACAC" Height="1" Stroke="#FFACACAC" Width="472" Canvas.Left="-28" Canvas.Top="560"/>
                 </Canvas>
             </TabItem>
         </TabControl>
