--- a/TransitHubXAML/EditAccountPasswordPage.xaml
+++ b/TransitHubXAML/EditAccountPasswordPage.xaml
@@ -11,7 +11,7 @@
         <Label Content="Confirm New Password" HorizontalAlignment="Left" Margin="44,299,0,0" VerticalAlignment="Top" Height="44" Width="257" FontSize="24"/>
         <Label Content="New Password" HorizontalAlignment="Left" Margin="43,165,0,0" VerticalAlignment="Top" Height="44" Width="173" FontSize="24"/>
 
-        <Button Content="Confirm" HorizontalAlignment="Left" Margin="30,521,0,0" VerticalAlignment="Top" Width="387" Height="58" FontSize="30" Background="#B83A3F" Foreground="White" Click="Button_Click_1"/>
+        <Button Content="Confirm" Style="{StaticResource RedButton}" HorizontalAlignment="Left" Margin="30,521,0,0" VerticalAlignment="Top" Width="387" Height="58" FontSize="30" Background="#B83A3F" Foreground="White" Click="Button_Click_1"/>
 
         <TextBox x:Name="passwordUnmask" Grid.Column="2"  Visibility="Hidden" MaxLength="21" HorizontalAlignment="Left" Height="42" Margin="50,262,0,0" Grid.Row="4" TextWrapping="NoWrap" VerticalAlignment="Top" Width="354" FontSize="24"/>
         <PasswordBox x:Name="passwordBox" MaxLength="21" HorizontalAlignment="Left" Height="42" Margin="50,214,0,0" VerticalAlignment="Top" Width="354" FontSize="24"/>
