--- a/TransitHubXAML/MainWindow.xaml
+++ b/TransitHubXAML/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TransitHubXAML"
         mc:Ignorable="d"
-        Title="MainWindow" Height="800" Width="460" ResizeMode="NoResize">
+        Title="TransitHub" Height="800" Width="460" ResizeMode="NoResize">
     <Grid>
         <Frame NavigationUIVisibility="Hidden" Name="mainFrame" Source="storePage.xaml" HorizontalAlignment="Left" Height="800" VerticalAlignment="Top" Width="444" Margin="0,10,0,0" Navigated="frame_Navigated"/>
         <Grid Name="navBar" Margin="0,666,0,0">
